Added JUnit test for DateConversion. Discovered IntelliJ refuses to put JavaFX in JAR. Updated README.TXT for workaround